--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@7.1.14",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-static-copy": "^3.1.3"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
